--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,7 @@
 	},
 	"files": {
 		"ignoreUnknown": false,
-		"ignore": ["tsconfig.*"]
+		"ignore": ["tsconfig.*", "node_modules", "dist"]
 	},
 	"formatter": {
 		"enabled": true,
@@ -22,6 +22,9 @@
 			"recommended": true,
 			"style": {
 				"noNonNullAssertion": "off"
+			},
+			"nursery": {
+				"useSortedClasses": "error"
 			}
 		}
 	},
