--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,17 @@
 	"manifest_version": 3,
 	"name": "pr watcher",
 	"version": "1.0.0",
+	"icons": {
+		"16": "icon16.png",
+		"48": "icon48.png",
+		"128": "icon128.png"
+	},
 	"action": {
+		"default_icon": {
+			"16": "icon16.png",
+			"48": "icon48.png",
+			"128": "icon128.png"
+		},
 		"default_popup": "index.html"
 	},
 	"background": {
