--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc -b && vite build",
-		"lint": "biome check --apply src",
+		"lint": "biome check --write src",
 		"preview": "vite preview"
 	},
 	"dependencies": {
