--- a/package.json
+++ b/package.json
@@ -1,30 +1,30 @@
 {
-	"name": "pr-watcher",
-	"private": true,
-	"version": "0.0.0",
-	"type": "module",
-	"scripts": {
-		"dev": "vite",
-		"build": "tsc -b && vite build",
-		"lint": "biome check --apply src",
-		"preview": "vite preview"
-	},
-	"dependencies": {
-		"@tailwindcss/vite": "^4.0.15",
-		"lucide-react": "^0.483.0",
-		"react": "^19.0.0",
-		"react-dom": "^19.0.0",
-		"tailwindcss": "^4.0.15"
-	},
-	"devDependencies": {
-		"@biomejs/biome": "1.9.4",
-		"@crxjs/vite-plugin": "2.0.0-beta.32",
-		"@types/chrome": "^0.0.310",
-		"@types/react": "^19.0.10",
-		"@types/react-dom": "^19.0.4",
-		"@vitejs/plugin-react": "^4.3.4",
-		"globals": "^15.15.0",
-		"typescript": "~5.7.2",
-		"vite": "^6.2.0"
-	}
+  "name": "pr-watcher",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "lint": "biome check --write src",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "@tailwindcss/vite": "^4.0.15",
+    "lucide-react": "^0.483.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "tailwindcss": "^4.0.15"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "1.9.4",
+    "@crxjs/vite-plugin": "2.0.0-beta.32",
+    "@types/chrome": "^0.0.310",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "@vitejs/plugin-react": "^4.3.4",
+    "globals": "^15.15.0",
+    "typescript": "~5.7.2",
+    "vite": "^6.2.0"
+  }
 }
